--- a/package.json
+++ b/package.json
@@ -3,21 +3,49 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "backbone": "^1.1.2",
+    "bootstrap": "^3.3.5",
+    "bootstrap-webpack": "0.0.5",
+    "css-loader": "^0.19.0",
     "keystone": "^0.3.14",
     "async": "^1.4.2",
     "underscore": "^1.8.3",
     "node-sass": "^3.3.2",
-    "node-sass-middleware": "^0.5.0", 
-    "dotenv": "^1.1.0"
+    "node-sass-middleware": "^0.5.0",
+    "dotenv": "^1.1.0",
+    "lodash": "^3.5.0",
+    "mobile-detect": "^1.3.0",
+    "sitemap": "^1.4.1",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
+    "jquery": "^2.1.3",
+    "imports-loader": "^0.6.4"
   },
   "devDependencies": {
+    "babel-core": "^4.0.1",
+    "babel-loader": "^4.0.0",
+    "del": "^1.1.1",
     "gulp": "^3.7.0",
     "gulp-jshint": "^1.9.0",
     "jshint-stylish": "^0.1.3",
     "gulp-shell": "^0.4.3",
+    "gulp-size": "^1.2.0",
     "gulp-watch": "^0.6.5",
-    "gulp-sass": "^2.0.4"
-    
+    "gulp-sass": "^2.0.4",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-concat": "^2.5.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-livereload": "^3.7.0",
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-uglifyjs": "^0.6.0",
+    "gulp-util": "^3.0.3",
+    "gulp-webpack": "^1.2.0",
+    "jade": "^1.11.0",
+    "jade-loader": "^0.7.1",
+    "webpack": "^1.5.3",
+    "webpack-dev-middleware": "^1.0.11"
   },
   "engines": {
     "node": ">=0.10.22",
